@@ -11,6 +11,7 @@
 	backwards compatible with type 2 specs.
 	* lib/rubygems/commands/query_command.rb:  Add installed location to
 	details for installed gems.
+	* lib/rubygems/indexer.rb:  Fix quick_index generation.
 
 2008-06-09  Eric Hodel  <drbrain@segment7.net>
 
